--- a/index.html
+++ b/index.html
@@ -1,148 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PoorCoin (POOR) — Official Website</title>
-  <meta name="description" content="PoorCoin (POOR) is a community-driven meme token on BNB Smart Chain. Trade on PancakeSwap, read the whitepaper, and join the community." />
-
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="PoorCoin (POOR) — Official Website" />
-  <meta property="og:description" content="Community-driven token on BNB Smart Chain. Fair, transparent, and fun." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://poorcoin.net/" />
-  <meta property="og:image" content="https://poorcoin.net/assets/poorcoin-logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/poorcoin-logo.png" />
-  <link rel="apple-touch-icon" href="/assets/poorcoin-logo.png" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <img class="logo" src="/assets/poorcoin-logo.png" alt="PoorCoin Logo" />
-        <div>
-          <h1>PoorCoin (POOR)</h1>
-          <p class="tagline">The community-driven token on BNB Smart Chain</p>
-        </div>
-      </div>
-      <nav class="nav">
-        <a href="#about">About</a>
-        <a href="#tokenomics">Tokenomics</a>
-        <a href="#roadmap">Roadmap</a>
-        <a href="#faq">FAQ</a>
-        <a href="whitepaper.html">Whitepaper</a>
-        <a class="btn btn--primary" target="_blank" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281">Buy</a>
-      </nav>
-    </div>
+  <header>
+    <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo" width="120">
+    <h1>PoorCoin (POOR)</h1>
+    <p>The community-driven token on BNB Smart Chain</p>
   </header>
 
-  <main>
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-text">
-          <h2>Built by and for the community</h2>
-          <p>PoorCoin (POOR) is a decentralized meme token. We keep things fun, transparent, and fair while we experiment, learn, and grow together.</p>
-          <div class="badges">
-            <span class="badge">Chain: BNB Smart Chain (BEP-20)</span>
-            <span class="badge">Ticker: POOR</span>
-            <span class="badge">Supply: 1,000,000,000</span>
-          </div>
-          <div class="cta">
-            <a class="btn btn--primary" target="_blank" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281">Trade on PancakeSwap</a>
-            <a class="btn btn--ghost" target="_blank" href="https://www.dextools.io/">View on DEXTools</a>
-          </div>
-        </div>
-      </div>
-    </section>
+  <section id="about">
+    <h2>Built by and for the community</h2>
+    <p>PoorCoin (POOR) is a decentralized meme token created by and for the community. 
+       Our mission is to keep things fun, transparent, and fair while we experiment, learn, and grow together.</p>
+    <p><strong>Chain:</strong> BNB Smart Chain (BEP-20)<br>
+       <strong>Ticker:</strong> POOR<br>
+       <strong>Total Supply:</strong> 1,000,000,000 POOR</p>
+  </section>
 
-    <section id="tokenomics" class="section">
-      <div class="container">
-        <h3 class="section-title">Tokenomics</h3>
-        <div class="cards">
-          <div class="card"><div class="k">Total Supply</div><div class="v">1,000,000,000 POOR</div></div>
-          <div class="card"><div class="k">In Circulation</div><div class="v">~695,089,465 POOR</div></div>
-          <div class="card"><div class="k">Liquidity (est.)</div><div class="v">12,000,000 POOR + 0.011 BNB</div></div>
-          <div class="card"><div class="k">Holders</div><div class="v">Growing daily</div></div>
-        </div>
-      </div>
-    </section>
+  <section id="tokenomics">
+    <h2>Tokenomics</h2>
+    <div class="card">Total Supply: 1,000,000,000 POOR</div>
+    <div class="card">In Circulation: ~695,089,465 POOR</div>
+    <div class="card">Liquidity (est.): 12,000,000 POOR + 0.011 BNB</div>
+    <div class="card">Holders: Growing daily</div>
+  </section>
 
-    <section id="contract" class="section">
-      <div class="container">
-        <h3 class="section-title">Smart Contract</h3>
-        <p><strong>Address:</strong> <span id="ca">0x4B336AABbB057503aD2a588201D56F0e6EadC281</span></p>
-        <div class="cta">
-          <button class="btn btn--primary" id="copyBtn" type="button">Copy Address</button>
-          <a class="btn btn--ghost" target="_blank" href="https://bscscan.com/token/0x4B336AABbB057503aD2a588201D56F0e6EadC281">View on BscScan</a>
-        </div>
-      </div>
-    </section>
+  <section id="links">
+    <h2>Quick Links</h2>
+    <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
+    <a href="https://twitter.com/yourtwitter" target="_blank">Twitter/X</a>
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank">Buy on PancakeSwap</a>
+    <a href="https://www.dextools.io/app/en/bnb/pair-explorer" target="_blank">View on DEXTools</a>
+  </section>
 
-    <section id="about" class="section">
-      <div class="container two-col">
-        <div class="col">
-          <h3>About PoorCoin</h3>
-          <p>PoorCoin is a playful meme token with a serious commitment to transparency. No promises, no financial advice — just community vibes. Join us, share ideas, and have fun.</p>
-          <p><a class="btn btn--pill" href="whitepaper.html">Read the Whitepaper</a></p>
-        </div>
-        <div class="col">
-          <h3>Quick Links</h3>
-          <div class="links">
-            <a class="btn btn--pill" target="_blank" href="https://t.me/yourtelegram">Telegram</a>
-            <a class="btn btn--pill" target="_blank" href="https://twitter.com/yourtwitter">Twitter / X</a>
-            <a class="btn btn--pill" target="_blank" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281">Buy POOR</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="roadmap" class="section">
-      <div class="container">
-        <h3 class="section-title">Roadmap</h3>
-        <div class="cards">
-          <div class="card"><div class="k">Phase 1 — Launch</div><div class="v">Website live, DEX listing, basic socials, community setup.</div></div>
-          <div class="card"><div class="k">Phase 2 — Growth</div><div class="v">Listings on trackers (DexTools, CG/CMC submission), giveaways, partnerships.</div></div>
-          <div class="card"><div class="k">Phase 3 — Utility & Fun</div><div class="v">Mini dApps, community contests, merch, more integrations.</div></div>
-          <div class="card"><div class="k">Phase 4 — Governance</div><div class="v">Community votes for next steps. Fully transparent direction.</div></div>
-        </div>
-      </div>
-    </section>
-
-    <section id="faq" class="section">
-      <div class="container">
-        <h3 class="section-title">FAQ</h3>
-        <div class="faq">
-          <details>
-            <summary>Is PoorCoin financial advice?</summary>
-            <p>No. PoorCoin is a meme/community project. Always DYOR and never invest more than you can afford to lose.</p>
-          </details>
-          <details>
-            <summary>Which network?</summary>
-            <p>BNB Smart Chain (BEP-20). Add the contract address above to your wallet to see POOR.</p>
-          </details>
-          <details>
-            <summary>Where do I trade?</summary>
-            <p>On PancakeSwap via the “Buy / Trade” buttons on this site.</p>
-          </details>
-          <details>
-            <summary>How do I get support?</summary>
-            <p>Join our Telegram — the community is friendly and helpful.</p>
-          </details>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <small>© 2025 PoorCoin — Built by the community • <a href="whitepaper.html">Whitepaper</a> • <a target="_blank" href="https://bscscan.com/token/0x4B336AABbB057503aD2a588201D56F0e6EadC281">BscScan</a></small>
-    </div>
+  <footer>
+    <p>© 2025 PoorCoin | Built by the community</p>
   </footer>
-
-  <script>
-    document.getElementById('copyBtn').addEventListener(
+</body>
+</html>
