--- a/index.html
+++ b/index.html
@@ -1,141 +1,156 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoorCoin (POOR) — Official Website</title>
-  <meta name="description" content="PoorCoin (POOR) is a community-driven meme token on BNB Smart Chain. Trade on PancakeSwap, view the chart, and join the community."/>
-  <link rel="icon" href="PoorCoin.png"/>
-  <meta property="og:title" content="PoorCoin (POOR) — Official Website"/>
-  <meta property="og:description" content="Community-driven token on BNB Smart Chain. Fair, transparent and fun."/>
-  <meta property="og:image" content="https://poorcoin.net/PoorCoin.png"/>
-  <meta name="theme-color" content="#16a34a"/>
+  <meta name="description" content="PoorCoin (POOR) – a community-driven meme token on BNB Smart Chain." />
+  <link rel="preload" as="image" href="PoorCoin.png" />
+  <link rel="stylesheet" href="style.css" />
   <style>
-    :root{
-      --bg:#f6faf7; --card:#fff; --ink:#0b1220; --muted:#5f6b7a;
-      --brand:#16a34a; --brand2:#22c55e; --ring:rgba(34,197,94,.25);
-      --bd:#e7eef2;
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0}
-    body{
-      font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Helvetica,Arial,sans-serif;
-      color:var(--ink);
-      background:
-        radial-gradient(900px 520px at 12% -8%, #d1fae5 0, rgba(209,250,229,0) 58%),
-        radial-gradient(900px 520px at 108% 8%, #e0f2fe 0, rgba(224,242,254,0) 58%),
-        var(--bg);
-    }
-    .container{max-width:1100px;margin:0 auto;padding:24px}
-    header.top{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{display:flex;align-items:center;gap:14px}
-    .brand img{width:48px;height:48px;border-radius:12px;box-shadow:0 6px 14px rgba(0,0,0,.08)}
-    h1{margin:0;font-size:clamp(22px,3.2vw,34px)}
-    .muted{color:var(--muted)}
-    nav{display:flex;gap:10px;flex-wrap:wrap}
-    nav a{
-      text-decoration:none;background:var(--card);border:1px solid var(--bd);
-      color:var(--ink);padding:8px 12px;border-radius:999px;font-weight:700
-    }
-    nav a:hover{box-shadow:0 0 0 6px var(--ring)}
-    .grid{display:grid;grid-template-columns:1.2fr 1fr;gap:18px;margin-top:16px}
-    @media (max-width:900px){.grid{grid-template-columns:1fr}}
-    .card{background:var(--card);border:1px solid var(--bd);border-radius:18px;padding:18px;box-shadow:0 10px 30px rgba(2,8,20,.04)}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:#ecfdf5;color:#065f46;font-weight:800;font-size:12px}
-    h2{margin:10px 0;font-size:clamp(18px,2.6vw,24px)}
-    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-    .btn{
-      appearance:none;border:0;border-radius:12px;padding:12px 16px;font-weight:800;
-      color:#fff;background:linear-gradient(180deg,var(--brand),var(--brand2));
-      text-decoration:none;display:inline-flex;align-items:center;gap:10px;cursor:pointer
-    }
-    .btn.secondary{background:#0ea5e9}
-    .btn.ghost{background:#ecfdf5;color:#065f46}
-    .btn:focus-visible{outline:0;box-shadow:0 0 0 6px var(--ring)}
-    .stats{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
-    @media (max-width:700px){.stats{grid-template-columns:1fr}}
-    .stat{background:#f8fafc;border:1px solid var(--bd);border-radius:14px;padding:14px}
-    .stat .k{color:#0f172a;font-weight:900}
-    code.kbd{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;background:#0f172a;color:#e2e8f0;border-radius:8px;padding:8px 10px}
-    footer{margin:26px 0 8px;text-align:center;color:var(--muted);font-size:14px}
+    /* малко допълнителен стил, работи заедно със style.css */
+    :root{--pc-green:#26b53e;--pc-bg:#f4f9f4;--pc-dark:#213821}
+    body{background:linear-gradient(180deg,#f4fff4 0,#f7fbff 100%);}
+    header{display:flex;gap:16px;align-items:center;justify-content:center;margin:28px 12px}
+    header img{width:58px;height:58px;border-radius:50%;object-fit:cover;filter:drop-shadow(0 6px 14px rgba(0,0,0,.12))}
+    header h1{margin:0;color:var(--pc-dark);font-size:2rem;line-height:1.1}
+    header p{margin:4px 0 0;color:#4a5b4a}
+    .wrap{max-width:1050px;margin:0 auto;padding:0 16px 48px}
+    .grid{display:grid;grid-template-columns:1fr;gap:18px}
+    @media(min-width:880px){.grid{grid-template-columns:1.2fr .9fr}}
+    .card{background:#fff;border-radius:16px;padding:18px;box-shadow:0 8px 24px rgba(0,0,0,.06)}
+    .card h3{margin:0 0 10px}
+    .pill{display:inline-block;background:#f1faf1;border:1px solid #e3f2e3;color:#2a592a;padding:8px 12px;border-radius:999px;font-weight:600;margin:6px 6px 0 0}
+    .btn{display:inline-block;padding:12px 16px;border-radius:12px;border:1px solid #cfe7cf;background:#fff}
+    .btn.primary{background:var(--pc-green);color:#fff;border-color:var(--pc-green)}
+    .btn.block{width:100%;text-align:center}
+    .btn:disabled{opacity:.5;cursor:not-allowed}
+    .row{display:flex;flex-wrap:wrap;gap:10px}
+    .kpi{background:#ffffff;border:1px solid #eef3ee;border-radius:14px;padding:14px;min-width:210px}
+    .kpi b{display:block;font-size:1.05rem;margin-bottom:4px;color:#2a2f2a}
+    footer{margin:40px 0 10px;text-align:center;color:#607060}
+    nav{position:sticky;top:0;background:#ffffffaa;backdrop-filter:saturate(180%) blur(6px);border-bottom:1px solid #eef3ee}
+    nav .navwrap{display:flex;gap:10px;align-items:center;justify-content:center;padding:10px}
+    nav a{padding:8px 10px;border-radius:10px;border:1px solid #eaeff0;background:#fff;color:#2d3a2d;text-decoration:none}
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- TOP -->
-    <header class="top">
-      <div class="brand">
-        <img src="PoorCoin.png" alt="PoorCoin Logo"/>
-        <div>
-          <h1>PoorCoin <span class="muted">(POOR)</span></h1>
-          <div class="muted">The community-driven token on BNB Smart Chain</div>
+  <nav>
+    <div class="navwrap">
+      <a href="#about">About</a>
+      <a href="#tokenomics">Tokenomics</a>
+      <a href="#links">Quick links</a>
+      <a href="whitepaper.html">Whitepaper</a>
+      <a id="buyTop" class="btn primary" href="#" target="_blank">Buy</a>
+    </div>
+  </nav>
+
+  <header class="wrap">
+    <img src="PoorCoin.png" alt="PoorCoin Logo" />
+    <div>
+      <h1>PoorCoin (POOR)</h1>
+      <p>The community-driven token on BNB Smart Chain</p>
+    </div>
+  </header>
+
+  <main class="wrap grid">
+    <!-- LEFT: About + Tokenomics -->
+    <section class="card" id="about">
+      <h3>Built by and for the community</h3>
+      <p>
+        PoorCoin (POOR) is a decentralized meme token created by and for the community.
+        We keep things fun, transparent, and fair while we experiment, learn and grow together.
+      </p>
+
+      <div class="row" style="margin-top:10px">
+        <span class="pill">Chain: BNB Smart Chain (BEP-20)</span>
+        <span class="pill">Ticker: POOR</span>
+        <span class="pill">Total supply: 1,000,000,000</span>
+      </div>
+
+      <hr style="margin:18px 0 14px;border:none;border-top:1px solid #eef2ee" />
+
+      <h3 id="tokenomics" style="margin-bottom:8px">Tokenomics</h3>
+      <div class="row">
+        <div class="kpi">
+          <b>Total supply</b>
+          1,000,000,000 POOR
+        </div>
+        <div class="kpi">
+          <b>In circulation (wallet)</b>
+          ~695,089,465 POOR
+        </div>
+        <div class="kpi">
+          <b>Liquidity (est.)</b>
+          12,000,000 POOR + 0.011 BNB
+        </div>
+        <div class="kpi">
+          <b>Holders</b>
+          Growing daily
         </div>
       </div>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#tokenomics">Tokenomics</a>
-        <a href="#links">Links</a>
-        <a href="whitepaper.html">Whitepaper</a>
-        <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">Buy</a>
-      </nav>
-    </header>
 
-    <div class="grid">
-      <!-- LEFT -->
-      <section class="card" id="about">
-        <span class="pill">Built by and for the community</span>
-        <h2>About PoorCoin</h2>
-        <p class="muted">
-          PoorCoin (POOR) is a decentralized meme token created by and for the community.
-          We keep things fun, transparent, and fair while we experiment, learn, and grow together.
+      <div class="row" style="margin-top:16px">
+        <a id="pancBtn1" class="btn primary" href="#" target="_blank">Trade on PancakeSwap</a>
+        <a id="dexBtn1" class="btn" href="#" target="_blank">View on DEXTools</a>
+      </div>
+    </section>
+
+    <!-- RIGHT: Quick Links / Contract -->
+    <aside class="card" id="links">
+      <h3>Quick Links</h3>
+
+      <div class="kpi" style="margin-bottom:12px">
+        <b>Contract</b>
+        <code id="contractText" style="user-select:all;display:block;word-break:break-all">PASTE_CONTRACT_ADDRESS_HERE</code>
+        <div class="row" style="margin-top:8px">
+          <button id="copyBtn" class="btn">Copy</button>
+        </div>
+        <p style="margin:10px 0 0;color:#6d776d;font-size:.9rem">
+          Always double-check the contract on <a id="bscscanLink" href="#" target="_blank">BscScan</a> before trading.
         </p>
-        <div class="row" style="margin-top:10px">
-          <span class="pill">Chain: BNB Smart Chain (BEP-20)</span>
-          <span class="pill">Ticker: <b>POOR</b></span>
-          <span class="pill">Total Supply: <b>1,000,000,000</b></span>
-        </div>
+      </div>
 
-        <h2 id="tokenomics" style="margin-top:18px">Tokenomics</h2>
-        <div class="stats">
-          <div class="stat">
-            <div class="muted">Total supply</div>
-            <div class="k">1,000,000,000 POOR</div>
-          </div>
-          <div class="stat">
-            <div class="muted">In circulation (est.)</div>
-            <div class="k">~695,089,465 POOR</div>
-          </div>
-          <div class="stat">
-            <div class="muted">Liquidity (est.)</div>
-            <div class="k">12,000,000 POOR + 0.011 BNB</div>
-          </div>
-        </div>
+      <div class="row" style="margin-top:6px">
+        <a class="btn" href="https://t.me/poorcoin_bsc" target="_blank">Telegram</a>
+        <a class="btn" href="https://twitter.com/" target="_blank">Twitter/X</a>
+        <a id="dexBtn2" class="btn" href="#" target="_blank">DEXTools</a>
+      </div>
 
-        <div class="row" style="margin-top:16px">
-          <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">Trade on PancakeSwap</a>
-          <a class="btn secondary" href="https://www.geckoterminal.com/bsc/pools/0xec7e56657bb005d3e10add91f72459fd3bbee2d1" target="_blank" rel="noopener">Live Chart</a>
-          <a class="btn ghost" href="https://bscscan.com/token/0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">BscScan</a>
-        </div>
-      </section>
+      <a id="pancBtn2" class="btn primary block" style="margin-top:12px" href="#" target="_blank">Buy on PancakeSwap</a>
+    </aside>
+  </main>
 
-      <!-- RIGHT -->
-      <aside class="card" id="links">
-        <h2>Quick Links</h2>
-        <div class="row">
-          <a class="btn ghost" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-          <a class="btn ghost" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">X (Twitter)</a>
-        </div>
+  <footer>
+    <p>© 2025 PoorCoin | Built by the community</p>
+  </footer>
 
-        <div style="margin-top:16px">
-          <div class="muted" style="margin-bottom:6px">Contract</div>
-          <div class="row">
-            <code id="contract" class="kbd">0x4B336AABbB057503aD2a588201D56F0e6EadC281</code>
-            <button class="btn" style="padding:10px 12px" id="copyBtn">Copy</button>
-            <button class="btn secondary" style="padding:10px 12px" id="addMM">Add to MetaMask</button>
-          </div>
-          <div class="muted" style="margin-top:8px">Always verify the address on BscScan before trading.</div>
-        </div>
+  <script>
+    // === EDIT ТУК: постави ПЪЛНИЯ contract address (започва с 0x...) ===
+    const CONTRACT = "0x4B336AABbB057503aD2a588201D56F0e6EadC281";
+    // =====================================================================
 
-        <div style="margin-top:18px">
-          <a class="btn" href="whitepaper.html">Read the Whitepaper</a>
-        </div>
+    const buyTop = document.getElementById('buyTop');
+    const panc1  = document.getElementById('pancBtn1');
+    const panc2  = document.getElementById('pancBtn2');
+    const dex1   = document.getElementById('dexBtn1');
+    const dex2   = document.getElementById('dexBtn2');
+    const cText  = document.getElementById('contractText');
+    const copyBtn= document.getElementById('copyBtn');
+    const bscan  = document.getElementById('bscscanLink');
+
+    // Генерираме линковете само ако има валиден адрес
+    function validAddr(a){ return typeof a==='string' && a.startsWith('0x') && a.length>40; }
+
+    if(validAddr(CONTRACT)){
+      const pcs = `https://pancakeswap.finance/swap?outputCurrency=${encodeURIComponent(CONTRACT)}`;
+      const dxt = `https://www.dextools.io/app/en/bnb/pair-explorer?from=live&address=${encodeURIComponent(CONTRACT)}`;
+      const bsc = `https://bscscan.com/token/${encodeURIComponent(CONTRACT)}`;
+
+      [buyTop, panc1, panc2].forEach(el => { el.href = pcs; el.removeAttribute('disabled'); });
+      [dex1, dex2].forEach(el => { el.href = dxt; el.removeAttribute('disabled'); });
+      bscan.href = bsc;
+      cText.textContent = CONTRACT;
+    }else{
+      [buyTop, panc1, panc2, dex1, dex2].forEach(el => { el.href="#"; el.setAttribute('disabled',''); });
+      bscan.href = "#";
